--- a/.github/workflows/build-qa.yml
+++ b/.github/workflows/build-qa.yml
@@ -7,13 +7,13 @@ on:
   # Triggers the workflow on push
   push:
     branches:    
-      - staging
+      - stage
   # Triggers the workflow on pull
   pull_request:
   # Run this workflow manually from the Actions tab
   workflow_dispatch:
     branches:    
-      - staging
+      - stage
 
 jobs:
 
