--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: Submodule update
         run: |
+          rm -rf common
           git submodule update --init --recursive
           git submodule foreach git pull origin master
 
@@ -35,7 +36,6 @@ jobs:
           
       - name: Run and build Hugo
         run: |
-          rm -rf common/content/${{ env.PRODUCT }}
           mkdir -p common/content/${{ env.PRODUCT }}
           cp -r java common/content/${{ env.PRODUCT }}
           cp -r net common/content/${{ env.PRODUCT }}
